[gd_scene load_steps=7 format=3 uid="uid://tvloi3cnfhdh"]

[ext_resource type="Script" path="res://Scenes/PlayerSubViewport.gd" id="1_exba4"]
[ext_resource type="PackedScene" uid="uid://b6vqynede46h" path="res://Scenes/Player.tscn" id="2_ex2rh"]
[ext_resource type="LabelSettings" uid="uid://b2pxnop0iphr1" path="res://Resources/LabelSettings.tres" id="3_sut66"]
[ext_resource type="Texture2D" uid="uid://dm36twtkw2t64" path="res://Assets/conke_icon.png" id="4_pl04s"]
[ext_resource type="Texture2D" uid="uid://bkqtg1uf7lt87" path="res://Assets/bepis_icon.png" id="5_b2vk1"]
[ext_resource type="Texture2D" uid="uid://coqnvraw2l84n" path="res://Assets/mintes_icon.png" id="5_rchg5"]

[node name="PlayerSubViewport" type="SubViewportContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_exba4")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
render_target_update_mode = 4

[node name="Player" parent="SubViewport" instance=ExtResource("2_ex2rh")]

[node name="MarginContainer" type="MarginContainer" parent="SubViewport"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="StatsContainer" type="HBoxContainer" parent="SubViewport/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Score" type="Label" parent="SubViewport/MarginContainer/StatsContainer"]
layout_mode = 2
text = "SCORE 0"
label_settings = ExtResource("3_sut66")

[node name="Health" type="Label" parent="SubViewport/MarginContainer/StatsContainer"]
layout_mode = 2
text = "HEALTH 3"
label_settings = ExtResource("3_sut66")

[node name="AmmoContainer" type="HBoxContainer" parent="SubViewport/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="ConkeTexture" type="TextureRect" parent="SubViewport/MarginContainer/AmmoContainer"]
layout_mode = 2
texture = ExtResource("4_pl04s")

[node name="ConkeLabel" type="Label" parent="SubViewport/MarginContainer/AmmoContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("3_sut66")

[node name="MintesTexture" type="TextureRect" parent="SubViewport/MarginContainer/AmmoContainer"]
layout_mode = 2
texture = ExtResource("5_rchg5")

[node name="MintesLabel" type="Label" parent="SubViewport/MarginContainer/AmmoContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("3_sut66")

[node name="BepisTexture" type="TextureRect" parent="SubViewport/MarginContainer/AmmoContainer"]
layout_mode = 2
texture = ExtResource("5_b2vk1")

[node name="BepisLabel" type="Label" parent="SubViewport/MarginContainer/AmmoContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("3_sut66")

[connection signal="bepises_changed" from="SubViewport/Player" to="." method="_on_player_bepises_changed"]
[connection signal="conkes_changed" from="SubViewport/Player" to="." method="_on_player_conkes_changed"]
[connection signal="health_changed" from="SubViewport/Player" to="." method="_on_player_health_changed"]
[connection signal="minteses_changed" from="SubViewport/Player" to="." method="_on_player_minteses_changed"]
[connection signal="score_changed" from="SubViewport/Player" to="." method="_on_player_score_changed"]
